# browsing_ai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
autobrowser/: .env.example  Makefile  README.md  requirements.txt
autobrowser/agents/: applier.py  content.py  critic.py  executor.py  extractor.py  navigator.py  planner.py  researcher.py  strategy.py
autobrowser/app/: main.py
autobrowser/app/static/: app.css  app.js
autobrowser/app/templates/: index.html
autobrowser/browser/: manager.py  reader.py  selectors.py  tools.py
autobrowser/core/: config.py  heuristics.py  logger.py  memory.py  orchestrator.py  safety.py  schemas.py
autobrowser/llm/: provider.py
autobrowser/llm/prompts/: critic.system.txt  planner.system.txt  researcher.system.txt  reviewer.system.txt  writer.system.txt
autobrowser/scripts/: eval_summary.py  setup_playwright.sh
autobrowser/storage/: files.py
autobrowser/tests/: test_basic.py  test_strategy.py
autobrowser/tests/eval/: __init__.py  test_mind2web.py  test_webarena.py
src/agent/: __init__.py  cli.py  config.py  errors.py  logging.py  types.py
src/agent/browser/: __init__.py  controller.py  observation.py  sandbox.py  tools.py
src/agent/core/: __init__.py  agent.py  evaluator.py  memory.py  planner.py  trace.py
src/agent/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py  prompts.py
src/browser_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_actions.py  test_e2e_smoke.py  test_evaluator.py  test_parsing.py
(+2 files in other folders)
